<resources>
    <string name="app_name">OrderFood</string>
    <string name="ten_dang_nhap">Tên đăng nhập</string>
    <string name="nhap_mat_khau">Nhập mật khẩu</string>
    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>
    <string name="ngay_sinh">Ngày sinh</string>
    <string name="chung_minh_nhan_dan">Chứng minh nhân dân</string>
    <string name="dong_y">Đồng ý</string>
    <string name="thoat">Thoát</string>
    <string name="dang_ky">Đăng ký</string>
    <string name="nhap_ten_dang_nhap">Vui lòng nhập tên đăng nhập</string>
    <string name="mat_khau_rong">Vui lòng nhập mật khẩu</string>
    <string name="them_thanh_cong">Thêm thành công</string>
    <string name="them_that_bai">Thêm thất bại</string>
    <string name="dang_nhap">Đăng nhập</string>
</resources>
