<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dang_ky"
        android:layout_above="@+id/lnKhungDangKy"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/size_15dp"
        android:textStyle="bold"
        android:textSize="@dimen/size_30sp"
        android:textColor="@color/colorAccent"/>

    <LinearLayout
        android:id="@+id/lnKhungDangKy"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_textview"
            android:hint="@string/ten_dang_nhap"
            android:padding="@dimen/size_10dp"
            android:layout_margin="@dimen/size_10dp"
            android:drawableStart="@drawable/user"
            android:drawablePadding="@dimen/size_10dp"
            android:maxLines="1"
            android:drawableLeft="@drawable/user" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_textview"
            android:hint="@string/nhap_mat_khau"
            android:padding="@dimen/size_10dp"
            android:layout_margin="@dimen/size_10dp"
            android:drawableStart="@drawable/password"
            android:inputType="textPassword"
            android:drawablePadding="@dimen/size_10dp"
            android:maxLines="1"
            android:drawableLeft="@drawable/password" />

        <RadioGroup
            android:layout_margin="@dimen/size_10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nam"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nu"/>
        </RadioGroup>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_textview"
            android:hint="@string/ngay_sinh"
            android:padding="@dimen/size_10dp"
            android:layout_margin="@dimen/size_10dp"
            android:drawableStart="@android:drawable/ic_menu_my_calendar"
            android:drawablePadding="@dimen/size_10dp"
            android:maxLines="1"
            android:drawableLeft="@android:drawable/ic_menu_my_calendar" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10dp"
            android:background="@drawable/custom_textview"
            android:drawableStart="@drawable/idcard"
            android:drawablePadding="@dimen/size_10dp"
            android:hint="@string/chung_minh_nhan_dan"
            android:padding="@dimen/size_10dp"
            android:maxLines="1"
            android:inputType="number"
            android:drawableLeft="@drawable/idcard" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/size_10dp"
                android:layout_margin="@dimen/size_10dp"
                android:text="@string/dong_y"
                android:background="@drawable/custom_button_green"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/size_10dp"
                android:layout_margin="@dimen/size_10dp"
                android:text="@string/thoat"
                android:background="@drawable/custom_button_orange"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>